crates/agglayer-jsonrpc-api/src/tests/snapshots/agglayer_jsonrpc_api__tests__get_latest_known_certificate_header__get_latest_known_certificate_header::no_certificate_header.snap
---
source: crates/agglayer-node/src/rpc/tests/get_latest_known_certificate_header.rs
expression: json
---
{
  "id": 0,
  "jsonrpc": "2.0",
  "result": null
}
