crates/agglayer-jsonrpc-api/src/tests/snapshots/agglayer_jsonrpc_api__tests__get_latest_known_certificate_header__get_latest_known_certificate_header::pending.snap
---
source: crates/agglayer-jsonrpc-api/src/tests/get_latest_known_certificate_header.rs
expression: json
snapshot_kind: text
---
{
  "id": 0,
  "jsonrpc": "2.0",
  "result": {
    "certificate_id": "0x2b2e5241405ab3eee514c9eb26f665ebb925e9121d6e6c745507806c2720f209",
    "certificate_index": null,
    "epoch_number": null,
    "height": 2,
    "metadata": "0x0000000000000000000000000000000000000000000000000000000000000000",
    "network_id": 1,
    "new_local_exit_root": "0x27ae5ba08d7291c96c8cbddcc148bf48a6d68c7974b94356f53754ef6171d757",
    "prev_local_exit_root": "0x27ae5ba08d7291c96c8cbddcc148bf48a6d68c7974b94356f53754ef6171d757",
    "settlement_tx_hash": null,
    "settlement_tx_hashes": [],
    "status": "Pending"
  }
}
