crates/agglayer-jsonrpc-api/src/tests/snapshots/agglayer_jsonrpc_api__tests__get_latest_known_certificate_header__get_latest_known_certificate_header::proven.snap
---
source: crates/agglayer-jsonrpc-api/src/tests/get_latest_known_certificate_header.rs
expression: json
snapshot_kind: text
---
{
  "id": 0,
  "jsonrpc": "2.0",
  "result": {
    "certificate_id": "0x2ed3425255cf2294687d3120a5d89c485fd0e2aade259d00bca2abc59ba70c92",
    "certificate_index": null,
    "epoch_number": null,
    "height": 1,
    "metadata": "0x0000000000000000000000000000000000000000000000000000000000000000",
    "network_id": 1,
    "new_local_exit_root": "0x27ae5ba08d7291c96c8cbddcc148bf48a6d68c7974b94356f53754ef6171d757",
    "prev_local_exit_root": "0x27ae5ba08d7291c96c8cbddcc148bf48a6d68c7974b94356f53754ef6171d757",
    "settlement_tx_hash": null,
    "settlement_tx_hashes": [],
    "status": "Proven"
  }
}
